# choba-adventure

./: Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
assets/data/chars/: choba.char.ron
assets/data/mob/: goblin.mob.ron  orc.mob.ron
assets/data/tiles/: downstairs.tile.ron  floor.tile.ron  wall.tile.ron
assets/ldtks/: Test.ldtk  World.01.ldtk
examples/: hello.rs
src/: assets.rs  lib.rs  main.rs  map.rs  player.rs  states.rs
src/assets/: atlas.rs  font.rs  mod.rs  texture.rs  tile.rs  tileset.rs
src/components/: cleanup.rs  mob.rs  mobs.rs  mod.rs  player.rs  tile.rs  tiles.rs
src/data/: mob.rs  mod.rs  tile.rs
src/map/: helpers.rs  map.rs  mapgen.rs  mod.rs  schema.rs  spawn.rs
src/misc/: mod.rs
src/plugins/: console.rs  dev.rs  game.rs  main_menu.rs  mod.rs  spawn.rs
src/plugins/dungeon/: mod.rs  spawn.rs
src/resources/: assets.rs  consoles.rs  mod.rs  tiles.rs  tileset.rs
src/resources/map/: helpers.rs  map.rs  mod.rs  schema.rs  tiletype.rs
src/resources/mobs/: mob.ron  mod.rs
src/systems/: input.rs  mod.rs
